test/expected/cli/set_errexit_options.out
== set -e aborts before the next command:
rc=1
== set +e lets the run continue:
reached
rc=0
== an unknown mood is rejected:
shit: 1:1: error: Builtin 'set': Unknown --mood value 'badmood', expected 'shit', 'bash', or 'sh'.
     1 |  set --mood badmood
       |  ^~~~~~~~~~~~~~~~~~ here.
rc=1
== set -o lists the option states:
errexit        	off
xtrace         	off
nounset        	on
pipefail       	on
allexport      	off
noclobber      	off
noglob         	off
noexec         	off
shitbox        	off
monitor        	off
failglob       	on
notify         	off
vi             	off
emacs          	on
hashall        	off
verbose        	off
keyword        	off
functrace      	off
braceexpand    	off
force-warnings 	off
mimicry        	off
force-diagnostics	on
no-diagnostics 	off
